# PicoKit

./: .gitignore  .gitmodules  Package.swift  README.md  picokit.json
.github/workflows/: ci.yml
Docs/: 00-README.md  01-overview.md  02-creating-a-project.md  02-supported-boards.md  03-architecture.md  03-core-value-types.md  04-gpio.md  04-requirements.md  05-package-products.md  05-usb-serial.md  06-creating-a-project.md  06-pwm.md  07-i2c.md  07-project-configuration.md  08-building-firmware.md  08-gpio-interrupts.md  09-complete-firmware-entry-point.md  09-flashing.md  10-runtime-model.md  10-serial-monitoring.md  11-api-reference.md  11-debugging.md  12-core-value-types.md  12-high-level-api.md  13-error-model.md  13-external-libraries.md  14-gpio.md  14-v0.2-interoperability.md  15-board-led.md  15-performance.md  16-timing.md  17-usb-serial.md  18-hardware-uart.md  19-pwm.md  20-adc.md  21-i2c.md  22-spi.md  23-gpio-interrupts.md  24-watchdog.md  25-complete-firmware-entry-point.md  (+46 more)
Firmware/: BridgingHeader.h  CMakeLists.txt  PicoKitGPIOFacade.c  PicoKitSDKBridge.c  PicoKitSDKBridge.h  PicoKitSDKBridge.modulemap  PicoKitShim.c
Legacy/UnsafeMMIO/: ADC.swift  Board.swift  Button.swift  Digital.swift  I2C.swift  Interrupts.swift  LED.swift  PWM.swift  README.md  SPI.swift  Serial.swift  SoftwareI2C.swift  Timer.swift  USB.swift  Watchdog.swift
Sources/Blink/: main.swift
Sources/Performance/: main.swift
Sources/PicoKit/: ADC.swift  Board.swift  Button.swift  Digital.swift  I2C.swift  Interrupts.swift  LED.swift  PWM.swift  SPI.swift  SoftwareI2C.swift  Timer.swift  USB.swift  Watchdog.swift
Sources/PicoKitCLI/: main.swift
Sources/PicoKitCore/: PicoKitCore.swift
Sources/PicoKitFacade/: PicoKit.swift
Sources/PicoKitHAL/: Analog.swift  Buses.swift  GPIO.swift  Interrupts.swift  PicoKitHAL.swift  Serial.swift  Timing.swift  Transfers.swift  UART.swift
Sources/Serial/: main.swift
Sources/SwiftPicoCLI/: main.swift
Tests/: api-reference.sh  bridge-atomic.sh  bridge-contract-firmware.sh  bridge-module.sh  bridge-surface.sh  bridge-validation.sh  bridge-warnings.sh  cli-integration.sh  dma-ownership-firmware.sh  docs-consistency.sh  docs-links-fixture.sh  docs-links.sh  firmware-matrix.sh  gpio-facade-host.sh  gpio-facade-size.sh  hardware-board-validation.sh  performance-fixture.sh  peripheral-pin-mux-validation.sh
Tests/HostTests/: main.swift
Tests/fixtures/GPIOFacadeHost/: main.c
Tests/fixtures/GPIOFacadeHost/include/hardware/: gpio.h
Tests/fixtures/GPIOFacadeHost/include/pico/: stdlib.h
Tests/fixtures/bridge-contracts/: main.swift
Tests/fixtures/cpp-interop/: main.swift
Tests/fixtures/cpp-interop/Interop/: CppInterop.cpp  CppInterop.h  CppInterop.module.modulemap
Tests/fixtures/dma-ownership/: main.swift
Tests/fixtures/gpio-facade/: main.swift
Tests/fixtures/split-source/: Support.swift  main.swift
Tests/fixtures/usb-serial-status/: main.swift
Tests/hardware/: README.md  SerialEchoTest.swift
Tests/integration/: cmake-options.sh  compiler-discovery.sh  cpp-interop.sh  default-firmware.sh  direct-cmake.sh  generated-blink.sh  generated-project.sh  generated-templates.sh  performance-firmware.sh  product-name.sh  riscv-firmware.sh  usb-disabled.sh  usb-serial-status-firmware.sh
